# meta-2.0

./: .gitignore  Dockerfile  README.md  RELEASE_NOTES.md  docker-compose.yml  fix_h200_notebook.py  fix_notebook.py  fix_notebook_dtype.py  openenv.yaml  patch_h200.py  prompt0.txt  pyproject.toml  update_h200.py
.github/workflows/: ci.yml
assets/: before_after_examples.md  blog_post.md  video_script.md
client/: pyproject.toml
client/examples/: quickstart.py
client/tribunal_client/: __init__.py  client.py
dashboard/: README.md  index.html  package.json  tailwind.config.js  tsconfig.node.json  vite.config.ts
dashboard/src/: App.tsx  index.css  store.ts  types.ts
dashboard/src/components/: BeforeAfterShowcase.tsx  Header.tsx  HeroPitchStrip.tsx  JudgePanel.tsx  PhaseTimeline.tsx  ReplayControls.tsx  RewardBreakdown.tsx  TrainingTrajectory.tsx  TribunalArena.tsx  WorkerCard.tsx
dashboard/src/hooks/: useApi.ts
notebooks/: README.md  train_grpo.ipynb
scripts/: build_notebook.py  capture_dashboard.py  eval_judge.py  push_to_hf.sh  run_local.sh  run_tests.py  smoke_test.py  validate_submission.py
shared/: pyproject.toml
shared/tribunal_shared/: __init__.py  schemas.py
src/tribunal/: __init__.py  env.py  failure_injector.py  logging_utils.py  schemas.py  server.py  tasks.py  workers.py
src/tribunal/data/tasks/: negotiator.json  researcher.json  summariser.json  ticket_resolver.json
src/tribunal/rewards/: __init__.py  aggregator.py  anti_hack.py  calibration.py  explanation_quality.py  false_positive_penalty.py  identification.py  type_classification.py
tests/: test_adversarial_probes.py  test_client.py  test_env_loop.py  test_failure_injector.py  test_rewards.py  test_schemas.py  test_server.py  test_tasks.py  test_workers.py
