[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tribunal-client"
version = "0.1.0"
description = "Python client for the AI Agent Oversight Tribunal OpenEnv environment"
authors = [
    { name = "Hackathon Team" }
]
requires-python = ">=3.11"
dependencies = [
    "tribunal-shared>=0.1.0",
    "httpx>=0.24",
    "pydantic>=2",
    "rich>=13",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["tribunal_client*"]
