[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tribunal-shared"
version = "0.1.0"
description = "Shared Pydantic schemas for the AI Agent Oversight Tribunal"
authors = [
    { name = "Hackathon Team" }
]
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["tribunal_shared*"]
